--- a/experiencia.html
+++ b/experiencia.html
@@ -28,7 +28,7 @@
 			<br>
 			<h2>Mi video</h2>			
 			<br>
-			<video src="media/habilidades.mp4" controls autoplay preload="auto" poster="imagenes/poster.png" width="500px" height="500px"></video>
+			<video src="media/habilidades.mp4" controls autoplay poster="imagenes/poster.png" width="500px" height="500px"></video>
 			<h2>Mi audio</h2>			
 			<audio src="media/hobbies.mp3" controls loop preload="none"></audio>
 		</article>
